# GEOG489Final

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.yml  pyproject.toml
docs/: sample_report.md
samples/: build_real_sample.sh  convert_osm_to_csv.py  pois_nova_real.csv
src/embedding_recommender/: cli.py  config.py  data_source.py  intent.py  llm_provider.py  profiler.py  recommender.py  reporter.py  rubric.py  schema.py  timing.py
src/embedding_recommender/scaffolds/: categorical_attribute_embedding.py  geometric_embedding.py  hybrid_categorical_geometric.py  hybrid_text_geometric.py  text_attribute_embedding.py
tests/: test_intent.py  test_profiler.py  test_reporter.py  test_schema.py
